burn_drv_sources = ['d_parent.cpp']

all_burn_drivers = {
    'atari': {
        'desc': 'Atari drivers',
        'sources': [
            'atari/d_akkaarrh.cpp',
            'atari/d_arcadecl.cpp',
            'atari/d_atarig1.cpp',
            'atari/d_atarisy1.cpp',
            'atari/d_badlands.cpp',
            'atari/d_batman.cpp',
            'atari/d_blstroid.cpp',
            'atari/d_eprom.cpp',
            'atari/d_gauntlet.cpp',
            'atari/d_klax.cpp',
            'atari/d_marblmd2.cpp',
            'atari/d_missile.cpp',
            'atari/d_offtwall.cpp',
            'atari/d_rampart.cpp',
            'atari/d_relief.cpp',
            'atari/d_shuuz.cpp',
            'atari/d_skullxbo.cpp',
            'atari/d_thunderj.cpp',
            'atari/d_toobin.cpp',
            'atari/d_vindictr.cpp',
            'atari/d_xybots.cpp',
        ],
    },
    'capcom': {
        'desc': 'Capcom drivers',
        'sources': [
            'capcom/cps.cpp',
            'capcom/cps2_crpt.cpp',
            'capcom/cps_config.cpp',
            'capcom/cps_draw.cpp',
            'capcom/cps_mem.cpp',
            'capcom/cps_obj.cpp',
            'capcom/cps_pal.cpp',
            'capcom/cps_run.cpp',
            'capcom/cps_rw.cpp',
            'capcom/cps_scr.cpp',
            'capcom/cpsr.cpp',
            'capcom/cpsrd.cpp',
            'capcom/cpst.cpp',
            'capcom/ctv.cpp',
            'capcom/d_cps1.cpp',
            'capcom/d_cps2.cpp',
            'capcom/fcrash_snd.cpp',
            'capcom/kabuki.cpp',
            'capcom/ps.cpp',
            'capcom/ps_m.cpp',
            'capcom/ps_z.cpp',
            'capcom/qs.cpp',
            'capcom/qs_c.cpp',
            'capcom/qs_z.cpp',
            'capcom/sf2mdt_snd.cpp',
        ],
    },
    'cave': {
        'desc': 'Cave drivers',
        'sources': [
            'cave/cave.cpp',
            'cave/cave_palette.cpp',
            'cave/cave_sprite.cpp',
            'cave/cave_tile.cpp',
            'cave/d_cv1k.cpp',
            'cave/d_dodonpachi.cpp',
            'cave/d_donpachi.cpp',
            'cave/d_esprade.cpp',
            'cave/d_feversos.cpp',
            'cave/d_gaia.cpp',
            'cave/d_guwange.cpp',
            'cave/d_hotdogst.cpp',
            'cave/d_korokoro.cpp',
            'cave/d_mazinger.cpp',
            'cave/d_metmqstr.cpp',
            'cave/d_pwrinst2.cpp',
            'cave/d_sailormn.cpp',
            'cave/d_tjumpman.cpp',
            'cave/d_uopoko.cpp',
        ],
    },
    'channelf': {
        'desc': 'Fairchild Channel F drivers',
        'sources': [
            'channelf/d_channelf.cpp',
        ],
    },
    'coleco': {
        'desc': 'ColecoVision drivers',
        'sources': [
            'coleco/d_coleco.cpp',
        ],
    },
    'cps3': {
        'desc': 'Capcom CPS-3 drivers',
        'sources': [
            'cps3/cps3run.cpp',
            'cps3/cps3snd.cpp',
            'cps3/d_cps3.cpp',
        ],
    },
    'dataeast': {
        'desc': 'Data East drivers',
        'sources': [
            'dataeast/d_actfancr.cpp',
            'dataeast/d_backfire.cpp',
            'dataeast/d_boogwing.cpp',
            'dataeast/d_brkthru.cpp',
            'dataeast/d_bwing.cpp',
            'dataeast/d_cbuster.cpp',
            'dataeast/d_chanbara.cpp',
            'dataeast/d_cninja.cpp',
            'dataeast/d_compgolf.cpp',
            'dataeast/d_darkseal.cpp',
            'dataeast/d_dassault.cpp',
            'dataeast/d_dblewing.cpp',
            'dataeast/d_dec0.cpp',
            'dataeast/d_dec8.cpp',
            'dataeast/d_deco156.cpp',
            'dataeast/d_deco32.cpp',
            'dataeast/d_decocass.cpp',
            'dataeast/d_decomlc.cpp',
            'dataeast/d_dietgogo.cpp',
            'dataeast/d_dreambal.cpp',
            'dataeast/d_funkyjet.cpp',
            'dataeast/d_karnov.cpp',
            'dataeast/d_kchamp.cpp',
            'dataeast/d_lemmings.cpp',
            'dataeast/d_liberate.cpp',
            'dataeast/d_metlclsh.cpp',
            'dataeast/d_pcktgal.cpp',
            'dataeast/d_pktgaldx.cpp',
            'dataeast/d_progolf.cpp',
            'dataeast/d_rohga.cpp',
            'dataeast/d_shootout.cpp',
            'dataeast/d_sidepckt.cpp',
            'dataeast/d_simpl156.cpp',
            'dataeast/d_sshangha.cpp',
            'dataeast/d_stadhero.cpp',
            'dataeast/d_supbtime.cpp',
            'dataeast/d_tumblep.cpp',
            'dataeast/d_vaportra.cpp',
            'dataeast/deco146.cpp',
            'dataeast/deco16ic.cpp',
            'dataeast/decobac06.cpp',
        ],
    },
    'galaxian': {
        'desc': 'Galaxian hardware drivers',
        'sources': [
            'galaxian/d_galaxian.cpp',
            'galaxian/gal_gfx.cpp',
            'galaxian/gal_run.cpp',
            'galaxian/gal_sound.cpp',
            'galaxian/gal_stars.cpp',
        ],
    },
    'irem': {
        'desc': 'Irem drivers',
        'sources': [
            'irem/d_m107.cpp',
            'irem/d_m52.cpp',
            'irem/d_m57.cpp',
            'irem/d_m58.cpp',
            'irem/d_m62.cpp',
            'irem/d_m63.cpp',
            'irem/d_m72.cpp',
            'irem/d_m90.cpp',
            'irem/d_m92.cpp',
            'irem/d_vigilant.cpp',
            'irem/irem_cpu.cpp',
            'irem/irem_sound.cpp',
        ],
    },
    'konami': {
        'desc': 'Konami drivers',
        'sources': [
            'konami/d_88games.cpp',
            'konami/d_ajax.cpp',
            'konami/d_aliens.cpp',
            'konami/d_asterix.cpp',
            'konami/d_battlnts.cpp',
            'konami/d_bishi.cpp',
            'konami/d_bladestl.cpp',
            'konami/d_blockhl.cpp',
            'konami/d_bottom9.cpp',
            'konami/d_chqflag.cpp',
            'konami/d_circusc.cpp',
            'konami/d_combatsc.cpp',
            'konami/d_contra.cpp',
            'konami/d_crimfght.cpp',
            'konami/d_dbz.cpp',
            'konami/d_ddribble.cpp',
            'konami/d_divebomb.cpp',
            'konami/d_fastlane.cpp',
            'konami/d_finalzr.cpp',
            'konami/d_flkatck.cpp',
            'konami/d_gberet.cpp',
            'konami/d_gbusters.cpp',
            'konami/d_gijoe.cpp',
            'konami/d_gradius3.cpp',
            'konami/d_gyruss.cpp',
            'konami/d_hcastle.cpp',
            'konami/d_hexion.cpp',
            'konami/d_hyperspt.cpp',
            'konami/d_ironhors.cpp',
            'konami/d_jackal.cpp',
            'konami/d_jailbrek.cpp',
            'konami/d_junofrst.cpp',
            'konami/d_kontest.cpp',
            'konami/d_labyrunr.cpp',
            'konami/d_lethal.cpp',
            'konami/d_mainevt.cpp',
            'konami/d_megazone.cpp',
            'konami/d_mikie.cpp',
            'konami/d_mogura.cpp',
            'konami/d_moo.cpp',
            'konami/d_mystwarr.cpp',
            'konami/d_nemesis.cpp',
            'konami/d_pandoras.cpp',
            'konami/d_parodius.cpp',
            'konami/d_pingpong.cpp',
            'konami/d_pooyan.cpp',
            'konami/d_rockrage.cpp',
            'konami/d_rocnrope.cpp',
            'konami/d_rollerg.cpp',
            'konami/d_sbasketb.cpp',
            'konami/d_scotrsht.cpp',
            'konami/d_shaolins.cpp',
            'konami/d_simpsons.cpp',
            'konami/d_spy.cpp',
            'konami/d_surpratk.cpp',
            'konami/d_thunderx.cpp',
            'konami/d_timeplt.cpp',
            'konami/d_tmnt.cpp',
            'konami/d_tp84.cpp',
            'konami/d_trackfld.cpp',
            'konami/d_tutankhm.cpp',
            'konami/d_twin16.cpp',
            'konami/d_ultraman.cpp',
            'konami/d_vendetta.cpp',
            'konami/d_wecleman.cpp',
            'konami/d_xexex.cpp',
            'konami/d_xmen.cpp',
            'konami/d_yiear.cpp',
            'konami/k007121.cpp',
            'konami/k007342_k007420.cpp',
            'konami/k007452.cpp',
            'konami/k051316.cpp',
            'konami/k051733.cpp',
            'konami/k051960.cpp',
            'konami/k052109.cpp',
            'konami/k053245.cpp',
            'konami/k053247.cpp',
            'konami/k053250.cpp',
            'konami/k053251.cpp',
            'konami/k053936.cpp',
            'konami/k054000.cpp',
            'konami/k054338.cpp',
            'konami/k055555.cpp',
            'konami/k056832.cpp',
            'konami/konamigx.cpp',
            'konami/konamiic.cpp',
            'konami/timeplt_snd.cpp',
        ],
    },
    'megadrive': {
        'desc': 'Sega Mega Drive drivers',
        'sources': [
            'megadrive/d_mdarcbl.cpp',
            'megadrive/d_megadrive.cpp',
            'megadrive/megadrive.cpp',
            'megadrive/stm95.cpp',
        ],
    },
    'midway': {
        'desc': 'Midway drivers',
        'sources': [
            'midway/d_kinst.cpp',
            'midway/d_tunit.cpp',
            'midway/d_wunit.cpp',
            'midway/d_xunit.cpp',
            'midway/d_yunit.cpp',
            'midway/dcs2k.cpp',
            'midway/ide.cpp',
            'midway/midtunit.cpp',
            'midway/midwayic.cpp',
            'midway/midwunit.cpp',
            'midway/narc_sound.cpp',
            'midway/williams_adpcm.cpp',
            'midway/williams_cvsd.cpp',
            'midway/yawdim_sound.cpp',
        ],
    },
    'msx': {
        'desc': 'MSX drivers',
        'sources': [
            'msx/d_msx.cpp',
        ],
    },
    'neogeo': {
        'desc': 'SNK Neo Geo drivers',
        'sources': [
            'neogeo/d_neogeo.cpp',
            'neogeo/neo_decrypt.cpp',
            'neogeo/neo_palette.cpp',
            'neogeo/neo_run.cpp',
            'neogeo/neo_sprite.cpp',
            'neogeo/neo_text.cpp',
            'neogeo/neo_upd4990a.cpp',
            'neogeo/neogeo.cpp',
        ],
    },
    'nes': {
        'desc': 'Nintendo NES drivers',
        'sources': [
            'nes/d_nes.cpp',
            'nes/nes.cpp',
        ],
    },
    'pce': {
        'desc': 'NEC PC Engine drivers',
        'sources': [
            'pce/d_pce.cpp',
            'pce/pce.cpp',
        ],
    },
    'pgm': {
        'desc': 'IGS PGM drivers',
        'sources': [
            'pgm/d_pgm.cpp',
            'pgm/pgm_asic25.cpp',
            'pgm/pgm_asic27a_type1.cpp',
            'pgm/pgm_asic27a_type2.cpp',
            'pgm/pgm_asic27a_type3.cpp',
            'pgm/pgm_asic3.cpp',
            'pgm/pgm_crypt.cpp',
            'pgm/pgm_draw.cpp',
            'pgm/pgm_run.cpp',
        ],
    },
    'pgm2': {
        'desc': 'IGS PGM2 drivers',
        'sources': [
            'pgm2/d_pgm2.cpp',
            'pgm2/pgm2_crypt.cpp',
            'pgm2/pgm2_draw.cpp',
            'pgm2/pgm2_run.cpp',
        ],
    },
    'pre90s': {
        'desc': 'Pre-1990 arcade drivers',
        'sources': [
            'pre90s/d_1942.cpp',
            'pre90s/d_1943.cpp',
            'pre90s/d_4enraya.cpp',
            'pre90s/d_aeroboto.cpp',
            'pre90s/d_akazukin.cpp',
            'pre90s/d_alinvade.cpp',
            'pre90s/d_alpha68k.cpp',
            'pre90s/d_alpha68k1.cpp',
            'pre90s/d_alpha68k2.cpp',
            'pre90s/d_ambush.cpp',
            'pre90s/d_amspdwy.cpp',
            'pre90s/d_arabian.cpp',
            'pre90s/d_argus.cpp',
            'pre90s/d_armedf.cpp',
            'pre90s/d_asteroids.cpp',
            'pre90s/d_astrocde.cpp',
            'pre90s/d_atetris.cpp',
            'pre90s/d_aztarac.cpp',
            'pre90s/d_bagman.cpp',
            'pre90s/d_baraduke.cpp',
            'pre90s/d_battlane.cpp',
            'pre90s/d_battlex.cpp',
            'pre90s/d_bbusters.cpp',
            'pre90s/d_beaminv.cpp',
            'pre90s/d_berzerk.cpp',
            'pre90s/d_bionicc.cpp',
            'pre90s/d_blktiger.cpp',
            'pre90s/d_blockade.cpp',
            'pre90s/d_blockout.cpp',
            'pre90s/d_blueprnt.cpp',
            'pre90s/d_bogeyman.cpp',
            'pre90s/d_bombjack.cpp',
            'pre90s/d_btime.cpp',
            'pre90s/d_bwidow.cpp',
            'pre90s/d_bzone.cpp',
            'pre90s/d_cabal.cpp',
            'pre90s/d_calorie.cpp',
            'pre90s/d_canyon.cpp',
            'pre90s/d_capbowl.cpp',
            'pre90s/d_carjmbre.cpp',
            'pre90s/d_ccastles.cpp',
            'pre90s/d_cclimber.cpp',
            'pre90s/d_champbas.cpp',
            'pre90s/d_cheekyms.cpp',
            'pre90s/d_chinagat.cpp',
            'pre90s/d_circus.cpp',
            'pre90s/d_citycon.cpp',
            'pre90s/d_cloak.cpp',
            'pre90s/d_cloud9.cpp',
            'pre90s/d_clshroad.cpp',
            'pre90s/d_commando.cpp',
            'pre90s/d_cop01.cpp',
            'pre90s/d_copsnrob.cpp',
            'pre90s/d_cybertnk.cpp',
            'pre90s/d_dacholer.cpp',
            'pre90s/d_darkmist.cpp',
            'pre90s/d_dday.cpp',
            'pre90s/d_ddayjlc.cpp',
            'pre90s/d_ddragon.cpp',
            'pre90s/d_deadang.cpp',
            'pre90s/d_djboy.cpp',
            'pre90s/d_dkong.cpp',
            'pre90s/d_docastle.cpp',
            'pre90s/d_dogfgt.cpp',
            'pre90s/d_dorachan.cpp',
            'pre90s/d_dribling.cpp',
            'pre90s/d_drmicro.cpp',
            'pre90s/d_dynduke.cpp',
            'pre90s/d_efdt.cpp',
            'pre90s/d_epos.cpp',
            'pre90s/d_equites.cpp',
            'pre90s/d_espial.cpp',
            'pre90s/d_ettrivia.cpp',
            'pre90s/d_exedexes.cpp',
            'pre90s/d_exerion.cpp',
            'pre90s/d_exidy.cpp',
            'pre90s/d_exidy440.cpp',
            'pre90s/d_exprraid.cpp',
            'pre90s/d_exterm.cpp',
            'pre90s/d_fantland.cpp',
            'pre90s/d_fastfred.cpp',
            'pre90s/d_fcombat.cpp',
            'pre90s/d_firetrap.cpp',
            'pre90s/d_flipjack.cpp',
            'pre90s/d_flower.cpp',
            'pre90s/d_foodf.cpp',
            'pre90s/d_freekick.cpp',
            'pre90s/d_funkybee.cpp',
            'pre90s/d_galaga.cpp',
            'pre90s/d_galivan.cpp',
            'pre90s/d_gaplus.cpp',
            'pre90s/d_ginganin.cpp',
            'pre90s/d_gng.cpp',
            'pre90s/d_goindol.cpp',
            'pre90s/d_gotya.cpp',
            'pre90s/d_gridlee.cpp',
            'pre90s/d_gunsmoke.cpp',
            'pre90s/d_headonb.cpp',
            'pre90s/d_higemaru.cpp',
            'pre90s/d_himesiki.cpp',
            'pre90s/d_holeland.cpp',
            'pre90s/d_hvyunit.cpp',
            'pre90s/d_invaders.cpp',
            'pre90s/d_iqblock.cpp',
            'pre90s/d_jack.cpp',
            'pre90s/d_jedi.cpp',
            'pre90s/d_jrpacman.cpp',
            'pre90s/d_kangaroo.cpp',
            'pre90s/d_kingofbox.cpp',
            'pre90s/d_kncljoe.cpp',
            'pre90s/d_kyugo.cpp',
            'pre90s/d_ladybug.cpp',
            'pre90s/d_lasso.cpp',
            'pre90s/d_lastduel.cpp',
            'pre90s/d_lockon.cpp',
            'pre90s/d_lwings.cpp',
            'pre90s/d_madmotor.cpp',
            'pre90s/d_magmax.cpp',
            'pre90s/d_mainsnk.cpp',
            'pre90s/d_mappy.cpp',
            'pre90s/d_marineb.cpp',
            'pre90s/d_mario.cpp',
            'pre90s/d_markham.cpp',
            'pre90s/d_mastboyo.cpp',
            'pre90s/d_matmania.cpp',
            'pre90s/d_mcr.cpp',
            'pre90s/d_mcr3.cpp',
            'pre90s/d_mcr68.cpp',
            'pre90s/d_megasys1.cpp',
            'pre90s/d_meijinsn.cpp',
            'pre90s/d_metlfrzr.cpp',
            'pre90s/d_mhavoc.cpp',
            'pre90s/d_miconkit.cpp',
            'pre90s/d_millipede.cpp',
            'pre90s/d_mirax.cpp',
            'pre90s/d_mitchell.cpp',
            'pre90s/d_mjkjidai.cpp',
            'pre90s/d_mmagic.cpp',
            'pre90s/d_mole.cpp',
            'pre90s/d_momoko.cpp',
            'pre90s/d_mouser.cpp',
            'pre90s/d_mrdo.cpp',
            'pre90s/d_mrflea.cpp',
            'pre90s/d_mrjong.cpp',
            'pre90s/d_munchmo.cpp',
            'pre90s/d_mustache.cpp',
            'pre90s/d_mystston.cpp',
            'pre90s/d_namcos1.cpp',
            'pre90s/d_namcos86.cpp',
            'pre90s/d_naughtyb.cpp',
            'pre90s/d_ninjakd2.cpp',
            'pre90s/d_nitedrvr.cpp',
            'pre90s/d_olibochu.cpp',
            'pre90s/d_omegrace.cpp',
            'pre90s/d_pac2650.cpp',
            'pre90s/d_pacland.cpp',
            'pre90s/d_pacman.cpp',
            'pre90s/d_pbaction.cpp',
            'pre90s/d_pengadvb.cpp',
            'pre90s/d_phoenix.cpp',
            'pre90s/d_pitnrun.cpp',
            'pre90s/d_pkunwar.cpp',
            'pre90s/d_popeye.cpp',
            'pre90s/d_popper.cpp',
            'pre90s/d_prehisle.cpp',
            'pre90s/d_psychic5.cpp',
            'pre90s/d_pturn.cpp',
            'pre90s/d_punchout.cpp',
            'pre90s/d_qbert.cpp',
            'pre90s/d_quantum.cpp',
            'pre90s/d_quizo.cpp',
            'pre90s/d_r2dtank.cpp',
            'pre90s/d_rallyx.cpp',
            'pre90s/d_redclash.cpp',
            'pre90s/d_renegade.cpp',
            'pre90s/d_route16.cpp',
            'pre90s/d_rpunch.cpp',
            'pre90s/d_safarir.cpp',
            'pre90s/d_sauro.cpp',
            'pre90s/d_scregg.cpp',
            'pre90s/d_seicross.cpp',
            'pre90s/d_senjyo.cpp',
            'pre90s/d_sf.cpp',
            'pre90s/d_shangkid.cpp',
            'pre90s/d_shisen.cpp',
            'pre90s/d_sidearms.cpp',
            'pre90s/d_skyarmy.cpp',
            'pre90s/d_skyfox.cpp',
            'pre90s/d_skykid.cpp',
            'pre90s/d_snk.cpp',
            'pre90s/d_snk6502.cpp',
            'pre90s/d_snk68.cpp',
            'pre90s/d_solomon.cpp',
            'pre90s/d_sonson.cpp',
            'pre90s/d_spacefb.cpp',
            'pre90s/d_spdodgeb.cpp',
            'pre90s/d_speedbal.cpp',
            'pre90s/d_splndrbt.cpp',
            'pre90s/d_sprcros2.cpp',
            'pre90s/d_srumbler.cpp',
            'pre90s/d_ssozumo.cpp',
            'pre90s/d_sstrangr.cpp',
            'pre90s/d_starwars.cpp',
            'pre90s/d_stfight.cpp',
            'pre90s/d_stuntair.cpp',
            'pre90s/d_sub.cpp',
            'pre90s/d_suna8.cpp',
            'pre90s/d_tagteam.cpp',
            'pre90s/d_tail2nose.cpp',
            'pre90s/d_tankbust.cpp',
            'pre90s/d_taxidriv.cpp',
            'pre90s/d_tbowl.cpp',
            'pre90s/d_tceptor.cpp',
            'pre90s/d_tecmo.cpp',
            'pre90s/d_tehkanwc.cpp',
            'pre90s/d_tempest.cpp',
            'pre90s/d_terracre.cpp',
            'pre90s/d_thedeep.cpp',
            'pre90s/d_thepit.cpp',
            'pre90s/d_thief.cpp',
            'pre90s/d_tiamc1.cpp',
            'pre90s/d_tigeroad.cpp',
            'pre90s/d_timelimt.cpp',
            'pre90s/d_toki.cpp',
            'pre90s/d_toypop.cpp',
            'pre90s/d_travrusa.cpp',
            'pre90s/d_tsamurai.cpp',
            'pre90s/d_tubep.cpp',
            'pre90s/d_usgames.cpp',
            'pre90s/d_vampire.cpp',
            'pre90s/d_vastar.cpp',
            'pre90s/d_vball.cpp',
            'pre90s/d_vicdual.cpp',
            'pre90s/d_vulgus.cpp',
            'pre90s/d_wallc.cpp',
            'pre90s/d_warpsped.cpp',
            'pre90s/d_warpwarp.cpp',
            'pre90s/d_wc90.cpp',
            'pre90s/d_wc90b.cpp',
            'pre90s/d_williams.cpp',
            'pre90s/d_wink.cpp',
            'pre90s/d_wiping.cpp',
            'pre90s/d_wiz.cpp',
            'pre90s/d_wwfsstar.cpp',
            'pre90s/d_xain.cpp',
            'pre90s/d_xxmissio.cpp',
            'pre90s/d_xyonix.cpp',
            'pre90s/d_zaccaria.cpp',
            'pre90s/d_zodiack.cpp',
            'pre90s/d_zwackery.cpp',
        ],
    },
    'psikyo': {
        'desc': 'Psikyo drivers',
        'sources': [
            'psikyo/d_psikyo.cpp',
            'psikyo/d_psikyo4.cpp',
            'psikyo/d_psikyosh.cpp',
            'psikyo/psikyo_palette.cpp',
            'psikyo/psikyo_sprite.cpp',
            'psikyo/psikyo_tile.cpp',
            'psikyo/psikyosh_render.cpp',
        ],
    },
    'pst90s': {
        'desc': 'Post-1990 arcade drivers',
        'sources': [
            'pst90s/d_1945kiii.cpp',
            'pst90s/d_20pacgal.cpp',
            'pst90s/d_3x3puzzl.cpp',
            'pst90s/d_aerofgt.cpp',
            'pst90s/d_airbustr.cpp',
            'pst90s/d_aquarium.cpp',
            'pst90s/d_artmagic.cpp',
            'pst90s/d_bestleag.cpp',
            'pst90s/d_bigstrkb.cpp',
            'pst90s/d_blackt96.cpp',
            'pst90s/d_blmbycar.cpp',
            'pst90s/d_bloodbro.cpp',
            'pst90s/d_bloodbro_ms.cpp',
            'pst90s/d_btoads.cpp',
            'pst90s/d_cischeat.cpp',
            'pst90s/d_crospang.cpp',
            'pst90s/d_crshrace.cpp',
            'pst90s/d_cultures.cpp',
            'pst90s/d_dcon.cpp',
            'pst90s/d_ddragon3.cpp',
            'pst90s/d_deniam.cpp',
            'pst90s/d_discoboy.cpp',
            'pst90s/d_diverboy.cpp',
            'pst90s/d_dooyong.cpp',
            'pst90s/d_dreamwld.cpp',
            'pst90s/d_drgnmst.cpp',
            'pst90s/d_drtomy.cpp',
            'pst90s/d_egghunt.cpp',
            'pst90s/d_eolith.cpp',
            'pst90s/d_eolith16.cpp',
            'pst90s/d_esd16.cpp',
            'pst90s/d_expro02.cpp',
            'pst90s/d_f-32.cpp',
            'pst90s/d_f1gp.cpp',
            'pst90s/d_funybubl.cpp',
            'pst90s/d_fuukifg2.cpp',
            'pst90s/d_fuukifg3.cpp',
            'pst90s/d_gaelco.cpp',
            'pst90s/d_gaelco2.cpp',
            'pst90s/d_gaiden.cpp',
            'pst90s/d_galpani3.cpp',
            'pst90s/d_galpanic.cpp',
            'pst90s/d_galspnbl.cpp',
            'pst90s/d_glass.cpp',
            'pst90s/d_go2000.cpp',
            'pst90s/d_goori.cpp',
            'pst90s/d_gotcha.cpp',
            'pst90s/d_gstream.cpp',
            'pst90s/d_gumbo.cpp',
            'pst90s/d_hyperpac.cpp',
            'pst90s/d_hyprduel.cpp',
            'pst90s/d_igs011.cpp',
            'pst90s/d_inufuku.cpp',
            'pst90s/d_itech32.cpp',
            'pst90s/d_itech8.cpp',
            'pst90s/d_jchan.cpp',
            'pst90s/d_kaneko16.cpp',
            'pst90s/d_kickgoal.cpp',
            'pst90s/d_ladyfrog.cpp',
            'pst90s/d_legionna.cpp',
            'pst90s/d_limenko.cpp',
            'pst90s/d_littlerb.cpp',
            'pst90s/d_lordgun.cpp',
            'pst90s/d_macrossp.cpp',
            'pst90s/d_mcatadv.cpp',
            'pst90s/d_metro.cpp',
            'pst90s/d_midas.cpp',
            'pst90s/d_mirage.cpp',
            'pst90s/d_missb2.cpp',
            'pst90s/d_mosaic.cpp',
            'pst90s/d_ms32.cpp',
            'pst90s/d_mugsmash.cpp',
            'pst90s/d_musclem.cpp',
            'pst90s/d_mwarr.cpp',
            'pst90s/d_namcona1.cpp',
            'pst90s/d_namconb1.cpp',
            'pst90s/d_namcos2.cpp',
            'pst90s/d_news.cpp',
            'pst90s/d_ngp.cpp',
            'pst90s/d_nmg5.cpp',
            'pst90s/d_nmk16.cpp',
            'pst90s/d_ohmygod.cpp',
            'pst90s/d_oneshot.cpp',
            'pst90s/d_onetwo.cpp',
            'pst90s/d_pasha2.cpp',
            'pst90s/d_pass.cpp',
            'pst90s/d_patapata.cpp',
            'pst90s/d_pipedrm.cpp',
            'pst90s/d_pirates.cpp',
            'pst90s/d_pkscram.cpp',
            'pst90s/d_playmark.cpp',
            'pst90s/d_powerbal.cpp',
            'pst90s/d_powerins.cpp',
            'pst90s/d_ppmast93.cpp',
            'pst90s/d_pushman.cpp',
            'pst90s/d_rabbit.cpp',
            'pst90s/d_raiden.cpp',
            'pst90s/d_raiden2.cpp',
            'pst90s/d_sandscrp.cpp',
            'pst90s/d_sderby.cpp',
            'pst90s/d_seibuspi.cpp',
            'pst90s/d_seta.cpp',
            'pst90s/d_seta2.cpp',
            'pst90s/d_shadfrce.cpp',
            'pst90s/d_shangha3.cpp',
            'pst90s/d_silkroad.cpp',
            'pst90s/d_silvmil.cpp',
            'pst90s/d_speedspn.cpp',
            'pst90s/d_splash.cpp',
            'pst90s/d_ssv.cpp',
            'pst90s/d_suna16.cpp',
            'pst90s/d_supduck.cpp',
            'pst90s/d_suprnova.cpp',
            'pst90s/d_taotaido.cpp',
            'pst90s/d_targeth.cpp',
            'pst90s/d_tecmo16.cpp',
            'pst90s/d_tecmosys.cpp',
            'pst90s/d_tetrisp2.cpp',
            'pst90s/d_thoop2.cpp',
            'pst90s/d_topdrive.cpp',
            'pst90s/d_tumbleb.cpp',
            'pst90s/d_unico.cpp',
            'pst90s/d_vamphalf.cpp',
            'pst90s/d_vegaeo.cpp',
            'pst90s/d_welltris.cpp',
            'pst90s/d_wrally.cpp',
            'pst90s/d_wwfwfest.cpp',
            'pst90s/d_x2222.cpp',
            'pst90s/d_xorworld.cpp',
            'pst90s/d_xorworld_ms.cpp',
            'pst90s/d_yunsun16.cpp',
            'pst90s/d_yunsung8.cpp',
            'pst90s/d_zerozone.cpp',
        ],
    },
    'sega': {
        'desc': 'Sega arcade drivers',
        'sources': [
            'sega/d_119.cpp',
            'sega/d_angelkds.cpp',
            'sega/d_appoooh.cpp',
            'sega/d_bankp.cpp',
            'sega/d_dotrikun.cpp',
            'sega/d_hangon.cpp',
            'sega/d_outrun.cpp',
            'sega/d_segac2.cpp',
            'sega/d_segae.cpp',
            'sega/d_segag80r.cpp',
            'sega/d_segag80v.cpp',
            'sega/d_segas32.cpp',
            'sega/d_suprloco.cpp',
            'sega/d_sys1.cpp',
            'sega/d_sys16a.cpp',
            'sega/d_sys16b.cpp',
            'sega/d_sys18.cpp',
            'sega/d_sys24.cpp',
            'sega/d_turbo.cpp',
            'sega/d_xbrd.cpp',
            'sega/d_ybrd.cpp',
            'sega/d_zaxxon.cpp',
            'sega/fd1089.cpp',
            'sega/fd1094.cpp',
            'sega/fd1094_intf.cpp',
            'sega/genesis_vid.cpp',
            'sega/mc8123.cpp',
            'sega/sega_315_5195.cpp',
            'sega/sega_speech.cpp',
            'sega/sys16_fd1094.cpp',
            'sega/sys16_gfx.cpp',
            'sega/sys16_run.cpp',
            'sega/usb_snd.cpp',
        ],
    },
    'sg1000': {
        'desc': 'Sega SG-1000 drivers',
        'sources': [
            'sg1000/d_sg1000.cpp',
        ],
    },
    'sms': {
        'desc': 'Sega Master System drivers',
        'sources': [
            'sms/d_sms.cpp',
            'sms/sms.cpp',
            'sms/smsfmintf.cpp',
            'sms/smspio.cpp',
            'sms/smsrender.cpp',
            'sms/smssound.cpp',
            'sms/smssystem.cpp',
            'sms/smstms.cpp',
            'sms/smsvdp.cpp',
        ],
    },
    'snes': {
        'desc': 'Nintendo SNES drivers',
        'sources': [
            'snes/apu.cpp',
            'snes/cart.cpp',
            'snes/cpu.cpp',
            'snes/cpu_sa1.cpp',
            'snes/cx4.cpp',
            'snes/d_snes.cpp',
            'snes/dma.cpp',
            'snes/dsp.cpp',
            'snes/input.cpp',
            'snes/ppu.cpp',
            'snes/sa1.cpp',
            'snes/sdd1.cpp',
            'snes/snes.cpp',
            'snes/snes_other.cpp',
            'snes/spc.cpp',
            'snes/statehandler.cpp',
        ],
    },
    'spectrum': {
        'desc': 'ZX Spectrum drivers',
        'sources': [
            'spectrum/d_spectrum.cpp',
            'spectrum/spectrum.cpp',
        ],
    },
    'taito': {
        'desc': 'Taito drivers',
        'sources': [
            'taito/cchip.cpp',
            'taito/d_arkanoid.cpp',
            'taito/d_ashnojoe.cpp',
            'taito/d_asuka.cpp',
            'taito/d_bublbobl.cpp',
            'taito/d_buggychl.cpp',
            'taito/d_chaknpop.cpp',
            'taito/d_crbaloon.cpp',
            'taito/d_cyclemb.cpp',
            'taito/d_darius2.cpp',
            'taito/d_exzisus.cpp',
            'taito/d_flstory.cpp',
            'taito/d_galastrm.cpp',
            'taito/d_gladiatr.cpp',
            'taito/d_groundfx.cpp',
            'taito/d_gunbuster.cpp',
            'taito/d_halleys.cpp',
            'taito/d_jollyjgr.cpp',
            'taito/d_ksayakyu.cpp',
            'taito/d_lkage.cpp',
            'taito/d_lsasquad.cpp',
            'taito/d_mexico86.cpp',
            'taito/d_minivdr.cpp',
            'taito/d_msisaac.cpp',
            'taito/d_nycaptor.cpp',
            'taito/d_othunder.cpp',
            'taito/d_qix.cpp',
            'taito/d_retofinv.cpp',
            'taito/d_rollrace.cpp',
            'taito/d_slapshot.cpp',
            'taito/d_ssrj.cpp',
            'taito/d_superchs.cpp',
            'taito/d_superqix.cpp',
            'taito/d_supridr.cpp',
            'taito/d_taitob.cpp',
            'taito/d_taitof2.cpp',
            'taito/d_taitof3.cpp',
            'taito/d_taitoh.cpp',
            'taito/d_taitol.cpp',
            'taito/d_taitomisc.cpp',
            'taito/d_taitosj.cpp',
            'taito/d_taitox.cpp',
            'taito/d_taitoz.cpp',
            'taito/d_tnzs.cpp',
            'taito/d_undrfire.cpp',
            'taito/d_wyvernf0.cpp',
            'taito/pc080sn.cpp',
            'taito/pc090oj.cpp',
            'taito/taito.cpp',
            'taito/taito_ic.cpp',
            'taito/taito_m68705.cpp',
            'taito/taitof3_snd.cpp',
            'taito/taitof3_video.cpp',
            'taito/tc0100scn.cpp',
            'taito/tc0110pcr.cpp',
            'taito/tc0140syt.cpp',
            'taito/tc0150rod.cpp',
            'taito/tc0180vcu.cpp',
            'taito/tc0220ioc.cpp',
            'taito/tc0280grd.cpp',
            'taito/tc0360pri.cpp',
            'taito/tc0480scp.cpp',
            'taito/tc0510nio.cpp',
            'taito/tc0640fio.cpp',
            'taito/tnzs_prot.cpp',
        ],
    },
    'toaplan': {
        'desc': 'Toaplan drivers',
        'sources': [
            'toaplan/d_batrider.cpp',
            'toaplan/d_batsugun.cpp',
            'toaplan/d_battleg.cpp',
            'toaplan/d_bbakraid.cpp',
            'toaplan/d_dogyuun.cpp',
            'toaplan/d_enmadaio.cpp',
            'toaplan/d_fixeight.cpp',
            'toaplan/d_ghox.cpp',
            'toaplan/d_kbash.cpp',
            'toaplan/d_kbash2.cpp',
            'toaplan/d_mahoudai.cpp',
            'toaplan/d_pipibibs.cpp',
            'toaplan/d_shippumd.cpp',
            'toaplan/d_slapfght.cpp',
            'toaplan/d_snowbro2.cpp',
            'toaplan/d_tekipaki.cpp',
            'toaplan/d_toaplan1.cpp',
            'toaplan/d_truxton2.cpp',
            'toaplan/d_twincobr.cpp',
            'toaplan/d_vfive.cpp',
            'toaplan/d_wardner.cpp',
            'toaplan/toa_bcu2.cpp',
            'toaplan/toa_extratext.cpp',
            'toaplan/toa_gp9001.cpp',
            'toaplan/toa_palette.cpp',
            'toaplan/toaplan.cpp',
            'toaplan/toaplan1.cpp',
        ],
    },
}

burn_driver_status = {}
all_burn_driver_source_names = all_burn_drivers.keys()
foreach name : burn_driver_list
    assert(
        all_burn_driver_source_names.contains(name),
        'Missing burn driver source metadata for burn_driver_list entry: '
        + name,
    )
endforeach

foreach name : burn_driver_dependencies.keys()
    assert(
        all_burn_driver_source_names.contains(name),
        'Missing burn driver source metadata for burn_driver_dependencies entry: '
        + name,
    )
endforeach

foreach name, driver : all_burn_drivers
    enabled = burn_driver_list.contains(name)
    burn_driver_status += {driver['desc']: enabled ? 'ON' : 'OFF'}
    if enabled
        burn_drv_sources += driver['sources']
    endif
endforeach
summary(burn_driver_status, section: 'Burn drivers', list_sep: '')

ctv_make = executable('ctv_make', 'capcom/ctv_make.cpp', native: true)
pgm_sprite_create = executable(
    'pgm_sprite_create',
    'pgm/pgm_sprite_create.cpp',
    native: true,
)

ctv_h = custom_target('ctv_h', output: 'ctv.h', command: [ctv_make], capture: true)
pgm_sprite_h = custom_target(
    'pgm_sprite_h',
    output: 'pgm_sprite.h',
    command: [pgm_sprite_create],
    capture: true,
)

toa_gp9001_func_h = custom_target(
    'toa_gp9001_func_h',
    output: ['toa_gp9001_func.h', 'toa_gp9001_func_table.h'],
    command: [
        perl,
        meson.current_source_dir() / '..' / '..' / 'dep' / 'scripts' / 'toa_gp9001_func.pl',
        '-o', meson.current_build_dir() / 'toa_gp9001_func.h',
    ],
)
neo_sprite_func_h = custom_target(
    'neo_sprite_func_h',
    output: ['neo_sprite_func.h', 'neo_sprite_func_table.h'],
    command: [
        perl,
        meson.current_source_dir() / '..' / '..' / 'dep' / 'scripts' / 'neo_sprite_func.pl',
        '-o', meson.current_build_dir() / 'neo_sprite_func.h',
    ],
)
cave_tile_func_h = custom_target(
    'cave_tile_func_h',
    output: ['cave_tile_func.h', 'cave_tile_func_table.h'],
    command: [
        perl,
        meson.current_source_dir() / '..' / '..' / 'dep' / 'scripts' / 'cave_tile_func.pl',
        '-o', meson.current_build_dir() / 'cave_tile_func.h',
    ],
)
cave_sprite_func_h = custom_target(
    'cave_sprite_func_h',
    output: ['cave_sprite_func.h', 'cave_sprite_func_table.h'],
    command: [
        perl,
        meson.current_source_dir() / '..' / '..' / 'dep' / 'scripts' / 'cave_sprite_func.pl',
        '-o', meson.current_build_dir() / 'cave_sprite_func.h',
    ],
)
psikyo_tile_func_h = custom_target(
    'psikyo_tile_func_h',
    output: ['psikyo_tile_func.h', 'psikyo_tile_func_table.h'],
    command: [
        perl,
        meson.current_source_dir() / '..' / '..' / 'dep' / 'scripts' / 'psikyo_tile_func.pl',
        '-o', meson.current_build_dir() / 'psikyo_tile_func.h',
    ],
)

burn_drv_sources += [
    ctv_h,
    pgm_sprite_h,
    toa_gp9001_func_h,
    neo_sprite_func_h,
    cave_tile_func_h,
    cave_sprite_func_h,
    psikyo_tile_func_h,
]

burn_drv_defs = []
foreach name : burn_driver_list
    burn_drv_defs += '-DBUILD_' + name.to_upper()
endforeach

if host_machine.system() == 'windows'
    burn_drv_defs += '-D_USE_MATH_DEFINES'
    burn_drv_defs += '-DUSE_SPEEDHACKS'
endif

burn_drv_cpp_warning_args = []
if cpp.get_id() in ['gcc', 'clang']
    burn_drv_cpp_warning_args = [
        '-Wno-sequence-point',
        '-Wno-sign-compare',
        '-Wno-unused-but-set-variable',
        '-Wno-unused-parameter',
        '-Wno-unused-value',
        '-Wno-unused-variable',
    ]
endif

burn_drv_cpp_args = burn_drv_defs + burn_drv_cpp_warning_args

burn_drv_lib = static_library(
    'burn_drv',
    burn_drv_sources,
    # TODO: cd deps split
    include_directories: [
        'capcom',
        'cave',
        'dataeast',
        'galaxian',
        'irem',
        'konami',
        'neogeo',
        'psikyo',
        'sega',
        'taito',
        'toaplan',
        '../../intf/audio',
        '../../intf/cd',
        '../../burner',
    ],
    dependencies: [burn_dep, burn_devices_dep, burn_snd_dep, cpu_dep],
    cpp_args: burn_drv_cpp_args,
)

burn_drv_dep = declare_dependency(
    link_with: burn_drv_lib,
    include_directories: include_directories('.'),
    compile_args: burn_drv_defs,
)
